fix for moving tpcc_models

--- a/tpcc_models/Cargo.toml
+++ b/tpcc_models/Cargo.toml
@@ -9,4 +9,5 @@ publish = false
 chrono.workspace = true
 diesel.workspace = true
 diesel_migrations.workspace = true
+libsqlite3-sys.workspace = true
 rand.workspace = true
