--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,27 +6,27 @@ publish = false
 
 [workspace]
 members = [
+    "sut",
     "tpcc_models"
 ]
 
 [features]
 default = ["sqlite"]
-mysql = ["diesel/mysql"]
-postgres = ["diesel/postgres"]
-sqlite = ["diesel/sqlite"]
+mysql = ["tpcc_models/mysql"]
+postgres = ["tpcc_models/postgres"]
+sqlite = ["tpcc_models/sqlite"]
 
 [dependencies]
-diesel.workspace = true
 tpcc_models = { path = "tpcc_models" }
 
 [workspace.dependencies]
 chrono = { version="0.4", default-features=false, features=["clock", "std"] }
-diesel = { version="2", default-features=false, features=["32-column-tables", "chrono", "numeric", "r2d2"] }
-diesel_migrations = { version = "2" }
 dotenvy = "0.15"
 env_logger = { version = "0.8", default-features=false }
-libsqlite3-sys = { version = "0.25", features= ["bundled"] }
 rand = "0.8"
+serde = { version="1", features=["derive"] }
+serde_json = "1"
+tokio = { version="1", default-features=false, features=["macros", "rt-multi-thread"] }
 
 [profile.release]
 opt-level = 2
