--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ env_logger = { version = "0.8", default-features=false }
 rand = "0.8"
 serde = { version="1", features=["derive"] }
 serde_json = "1"
-tokio = { version="1", default-features=false, features=["macros", "rt-multi-thread"] }
+thiserror = "1"
+tokio = { version="1", default-features=false, features=["macros", "rt", "rt-multi-thread"] }
 
 [profile.release]
 opt-level = 2
