--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ sqlite = ["tpcc_models/sqlite"]
 tpcc_models = { path = "tpcc_models" }
 
 [workspace.dependencies]
-chrono = { version="0.4", default-features=false, features=["clock", "std"] }
+chrono = { version="0.4", default-features=false, features=["clock", "serde", "std"] }
 dotenvy = "0.15"
 env_logger = { version = "0.8", default-features=false }
 rand = "0.8"
