--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,12 @@
-[package]
-name = "diesel-tpc-c"
-version = "0.1.0"
-edition = "2021"
-publish = false
-
 [workspace]
+resolver = "2"
 members = [
     "if_types",
+    "rte",
     "sut",
     "tpcc_models"
 ]
-
-[features]
-default = ["sqlite"]
-mysql = ["tpcc_models/mysql"]
-postgres = ["tpcc_models/postgres"]
-sqlite = ["tpcc_models/sqlite"]
-
-[dependencies]
-tpcc_models = { path = "tpcc_models" }
+default-members = ["rte"]
 
 [workspace.dependencies]
 chrono = { version="0.4", default-features=false, features=["clock", "serde", "std"] }
@@ -35,4 +23,3 @@ opt-level = 2
 lto = "fat"
 codegen-units = 1
 strip = "symbols"
-
