--- a/rte/Cargo.toml
+++ b/rte/Cargo.toml
@@ -12,3 +12,5 @@ serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+tpcc_rand = { path="../tpcc_rand" }
+url = "2"
