--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
 chrono = { version="0.4", default-features=false, features=["clock", "serde", "std"] }
 dotenvy = "0.15"
 env_logger = { version = "0.8", default-features=false }
+log = "0.4"
 serde = { version="1", features=["derive"] }
 serde_json = "1"
 thiserror = "1"
