--- a/rte/Cargo.toml
+++ b/rte/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 clap = { version="4", features=["derive"] }
 env_logger.workspace = true
+futures = { version="0.3" }
 if_types = { path="../if_types" }
+log.workspace = true
 reqwest = { version="0.12", features=["json"] }
 serde.workspace = true
 serde_json.workspace = true
