feat: Set DB connections based on CPUs

--- a/sut/Cargo.toml
+++ b/sut/Cargo.toml
@@ -30,6 +30,7 @@ axum = { version="0.7" }
 env_logger.workspace = true
 if_types = { path="../if_types" }
 lambda_http = { version="0.13", default-features=false, features=["apigw_http"] }
+num_cpus = "1"
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
