feat: Support PostgreSQL

--- a/tpcc_models/Cargo.toml
+++ b/tpcc_models/Cargo.toml
@@ -7,7 +7,6 @@ publish = false
 
 [features]
 default = ["sqlite"]
-mysql = ["diesel/mysql"]
 postgres = ["diesel/postgres"]
 sqlite = ["dep:libsqlite3-sys", "diesel/sqlite"]
 
@@ -16,4 +15,5 @@ chrono.workspace = true
 diesel = { version="2", default-features=false, features=["32-column-tables", "chrono", "numeric", "r2d2", "returning_clauses_for_sqlite_3_35"] }
 diesel_migrations = { version = "2" }
 libsqlite3-sys = { version = "0.25", features= ["bundled"], optional=true }
+log.workspace = true
 tpcc_rand = { path="../tpcc_rand" }
